# libzio

./: CMakeLists.txt
src/: CMakeLists.txt  zsocket.c  zsocket.h
src/serial/: serial_port.c  serial_port.h  serial_public.h  serial_unix.c  serial_unix.h  serial_win.c  serial_win.h
src/socket/: socket_cli.c  socket_cli.h  socket_public.h
tests/: CMakeLists.txt  serial_test.cpp  socket_test.cpp
